# clawdstrike

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.hushd  NON_GOALS.md  NOTICE  README.md  SECURITY.md  THREAT_MODEL.md  biome.json  deny.toml  moon.yml  package-lock.json  package.json
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/icons/: icon.icns
apps/agent/src-tauri/resources/: default-policy.yaml
apps/agent/src-tauri/resources/cloud-dashboard/: index.html
apps/agent/src-tauri/src/: agent_auth.rs  api_server.rs  approval.rs  approval_outbox.rs  approval_sync.rs  daemon.rs  decision.rs  enrollment.rs  events.rs  main.rs  nats_client.rs  nats_subjects.rs  notifications.rs  policy.rs  policy_sync.rs  posture_commands.rs  session.rs  settings.rs  telemetry_publisher.rs  tray.rs  updater.rs
apps/agent/src-tauri/src/integrations/: claude_code.rs  mcp_server.rs  mod.rs  openclaw_plugin.rs
apps/agent/src-tauri/src/openclaw/: manager.rs  mod.rs  protocol.rs  secret_store.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  marketplace_discovery.rs
apps/desktop/src-tauri/src/commands/: openclaw.rs  policy.rs  receipts.rs  spine.rs
crates/hush-cli/: Cargo.toml
crates/hush-core/: Cargo.toml
crates/hush-multi-agent/: Cargo.toml
crates/hush-proxy/: Cargo.toml
crates/libs/clawdstrike/: Cargo.toml  README.md
crates/libs/clawdstrike-guard-sdk/: Cargo.toml
crates/libs/clawdstrike-guard-sdk-macros/: Cargo.toml
crates/libs/clawdstrike-guard-sdk-macros/src/: lib.rs
crates/libs/clawdstrike-guard-sdk/src/: host.rs  lib.rs  prelude.rs  types.rs
crates/libs/clawdstrike-guard-sdk/tests/: macro_expansion.rs
crates/libs/clawdstrike/rulesets/: ai-agent-posture.yaml  ai-agent.yaml  cicd.yaml  default.yaml  permissive.yaml  strict.yaml
crates/libs/clawdstrike/src/: error.rs  hygiene.rs  instruction_hierarchy.rs  jailbreak.rs  lib.rs  output_sanitizer.rs  policy.rs  posture.rs  semver_utils.rs  text_utils.rs
crates/libs/clawdstrike/src/async_guards/: runtime.rs
crates/libs/clawdstrike/src/guards/: custom.rs  forbidden_path.rs  jailbreak.rs  mod.rs  path_allowlist.rs  path_normalization.rs  secret_leak.rs  shell_command.rs
crates/libs/clawdstrike/src/irm/: fs.rs  net.rs
crates/libs/clawdstrike/src/pkg/: archive.rs  index.rs  integrity.rs  lockfile.rs  manifest.rs  merkle.rs  mod.rs  resolver.rs  resolver_deps.rs  store.rs  test_runner.rs  trust.rs  version.rs
crates/libs/clawdstrike/src/plugins/: guard.rs  manifest.rs  mod.rs
crates/libs/clawdstrike/tests/: async_guard_runtime.rs  compliance_templates.rs  cua_guard_integration.rs  cua_guards.rs  cua_rulesets.rs  policy_extends.rs  proptest_guards.rs  s2bench_attack_scenarios.rs  security_regressions.rs  spider_sense_guard.rs  threat_intel_guards.rs
crates/libs/hunt-correlate/: Cargo.toml
crates/libs/hunt-correlate/src/: engine.rs  error.rs  ioc.rs  lib.rs  report.rs  rules.rs  watch.rs
crates/libs/hunt-query/: Cargo.toml
crates/libs/hunt-query/src/: error.rs  lib.rs  local.rs  nl.rs  query.rs  render.rs  replay.rs  timeline.rs
crates/libs/hunt-scan/: Cargo.toml
crates/libs/hunt-scan/src/: analysis.rs  discovery.rs  lib.rs  mcp_client.rs  models.rs  packages.rs  policy_eval.rs  query_filter.rs  receipt.rs  redact.rs  skills.rs  storage.rs
crates/libs/hush-ffi/: Cargo.toml
crates/libs/hush-wasm/: Cargo.toml  README.md  README.npm.md  hush_wasm.d.ts  hush_wasm.js  hush_wasm_bg.wasm.d.ts  moon.yml  package.json
crates/libs/hush-wasm/src/: detect.rs  lib.rs
crates/libs/hush-wasm/types/: hush_wasm.d.ts
crates/libs/spine/: Cargo.toml
crates/libs/spine/src/: nats_transport.rs
crates/services/clawdstrike-registry/: Cargo.toml
crates/services/clawdstrike-registry/src/: attestation.rs  auth.rs  config.rs  db.rs  error.rs  index.rs  keys.rs  main.rs  oidc.rs  state.rs  storage.rs
crates/services/clawdstrike-registry/src/api/: attestation.rs  audit.rs  checkpoint.rs  consistency.rs  download.rs  health.rs  index.rs  info.rs  mod.rs  org.rs  proof.rs  publish.rs  search.rs  stats.rs  trusted_publishers.rs  yank.rs
crates/services/cloud-api/: Cargo.toml
crates/services/cloud-api/migrations/: 002_adaptive_sdr_schema.sql  003_adaptive_sdr_token_and_approval_flow.sql  004_adaptive_sdr_active_policy.sql  005_adaptive_sdr_approval_outbox.sql
crates/services/cloud-api/src/: config.rs  crypto.rs  integration_tests.rs  main.rs  state.rs
crates/services/cloud-api/src/models/: agent.rs  approval.rs  mod.rs
crates/services/cloud-api/src/routes/: agents.rs  approvals.rs  events.rs  mod.rs  policies.rs  tenants.rs
crates/services/cloud-api/src/services/: agent_heartbeat_consumer.rs  approval_request_consumer.rs  approval_resolution_outbox.rs  audit_consumer.rs  consumer_ack.rs  mod.rs  policy_distribution.rs  stale_agent_detector.rs  tenant_provisioner.rs
crates/services/cloud-api/tests/: migration_contract.rs
crates/services/hush-cli/: Cargo.toml
crates/services/hush-cli/src/: clawdstrike.rs  hunt.rs  hush_run.rs  main.rs  mirror.rs  pkg_cli.rs  policy_lint.rs  policy_observe.rs  registry_config.rs  remote_extends.rs  tests.rs
crates/services/hush-cli/tests/: abuse_harness.rs  hunt_e2e.rs
crates/services/hushd/: Cargo.toml
crates/services/hushd/src/: authz.rs  config.rs  lib.rs  remote_extends.rs  spine_publisher.rs  state.rs  tls.rs
crates/services/hushd/src/api/: audit.rs  check.rs  eval.rs  events.rs  health.rs  me.rs  mod.rs  policy.rs  policy_scoping.rs  rbac.rs  saml.rs  session.rs  shutdown.rs  spine_replay.rs  v1.rs  webhooks.rs
crates/services/hushd/src/audit/: mod.rs
crates/services/hushd/tests/: cua_policy_events.rs  integration.rs  security_regressions.rs  tls.rs
examples/delegated-pipeline/: Cargo.toml  README.md
examples/delegated-pipeline/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: irm_fs_parse.rs  irm_net_parse.rs  remote_extends_parse.rs
(+553 files in other folders)
