[workspace]
resolver = "2"
members = [
    "crates/libs/hush-core",
    "crates/libs/hush-proxy",
    "crates/libs/clawdstrike",
    "crates/libs/hush-certification",
    "crates/services/hush-cli",
    "crates/services/hushd",
    "crates/libs/hush-wasm",
    "crates/libs/hush-multi-agent",
    "crates/libs/spine",
    "crates/services/spine-cli",
    "crates/bridges/tetragon-bridge",
    "crates/bridges/hubble-bridge",
    "crates/services/eas-anchor",
    "crates/tests/sdr-integration-tests",
    "crates/services/cloud-api",
    "packages/sdk/hush-py/hush-native",
    "crates/libs/hush-ffi",
    "crates/libs/clawdstrike-guard-sdk",
    "crates/libs/clawdstrike-guard-sdk-macros",
    "crates/services/clawdstrike-registry",
    "crates/libs/hunt-scan",
    "crates/libs/hunt-query",
    "crates/libs/hunt-correlate",
]
exclude = [
    "fuzz",
    "examples/rust/basic-verification",
    "examples/autonomous-sandbox",
    "examples/multi-agent-orchestration",
    "examples/delegated-pipeline",
    "apps/desktop/src-tauri",
    "apps/agent/src-tauri",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/backbay-labs/clawdstrike"
rust-version = "1.93"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2.2", features = ["rand_core", "zeroize"] }
zeroize = "1"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
base64 = "0.22"
openssl = { version = "0.10", features = ["vendored"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ryu = "1.0"

# Async runtime
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"

# Patterns
regex = "1.12"
glob = "0.3"
globset = "0.4"
roxmltree = "0.21"
rust-xmlsec = "1.0.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
crossterm = "0.28"
time = "0.3"

# UUID
uuid = { version = "1.21", features = ["v4", "v7", "serde", "js"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
rustls = "0.23"
rustls-pki-types = "1.14"
tokio-rustls = "0.26"

# Rate limiting
governor = "0.10"
dashmap = "6.1"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }
sqlx-core = { version = "0.8", default-features = false, features = ["json", "chrono", "uuid", "migrate", "_rt-tokio"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["chrono", "uuid", "json"] }

# Async utilities
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Config
toml = "0.9"
dirs = "6.0"

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart"] }

# Compression
flate2 = "1.1"
tar = "0.4"
zstd = "0.13"

# URL parsing
url = "2.5"

# Version solving
semver = "1"
pubgrub = "0.3"

# Parsing
shell-words = "1.1"
json5 = "0.4"
md-5 = "0.10"

# JWT (OIDC)
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs", "use_pem"] }

# Internal crates
hush-core = { path = "crates/libs/hush-core", version = "0.1.0" }
hush-proxy = { path = "crates/libs/hush-proxy", version = "0.1.0" }
clawdstrike = { path = "crates/libs/clawdstrike", version = "0.1.1", default-features = false }
hush-certification = { path = "crates/libs/hush-certification", version = "0.1.0" }
spine = { package = "hush-spine", path = "crates/libs/spine", version = "0.1.0" }
hunt-scan = { path = "crates/libs/hunt-scan", version = "0.1.3" }
hunt-query = { path = "crates/libs/hunt-query", version = "0.1.3" }
hunt-correlate = { path = "crates/libs/hunt-correlate", version = "0.1.3" }

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
