[package]
name = "hush-fuzz"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hush-core = { path = "../crates/libs/hush-core" }
hush-proxy = { path = "../crates/libs/hush-proxy" }
clawdstrike = { path = "../crates/libs/clawdstrike" }
hushd = { path = "../crates/services/hushd" }
arbitrary = { version = "1.3", features = ["derive"] }
tokio = { version = "1.49", features = ["rt", "time"] }
serde_json = "1.0"

[[bin]]
name = "fuzz_sha256"
path = "fuzz_targets/sha256.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_merkle"
path = "fuzz_targets/merkle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_policy_parse"
path = "fuzz_targets/policy_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_secret_leak"
path = "fuzz_targets/secret_leak.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dns_parse"
path = "fuzz_targets/dns_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_sni_parse"
path = "fuzz_targets/sni_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_irm_fs_parse"
path = "fuzz_targets/irm_fs_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_irm_net_parse"
path = "fuzz_targets/irm_net_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_remote_extends_parse"
path = "fuzz_targets/remote_extends_parse.rs"
test = false
doc = false
bench = false
