[package]
name = "hush-cli"
description = "Command-line interface for clawdstrike"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "cli", "verification", "clawdstrike"]
categories = ["command-line-utilities", "authentication"]
readme = "../../README.md"

[[bin]]
name = "hush"
path = "src/main.rs"

[[bin]]
name = "clawdstrike"
path = "src/clawdstrike.rs"

[dependencies]
hush-core.workspace = true
hush-proxy.workspace = true
clawdstrike.workspace = true
clap.workspace = true
clap_complete = "4.5"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
sha2.workspace = true
hex.workspace = true
rand.workspace = true
chrono.workspace = true
base64.workspace = true
uuid.workspace = true
regorus = { version = "0.9.1", optional = true }

[features]
default = ["rego-runtime", "wasm-plugin-runtime"]
rego-runtime = ["dep:regorus"]
wasm-plugin-runtime = ["clawdstrike/wasm-plugin-runtime"]

[lints]
workspace = true
