[package]
name = "hush-core"
description = "Core cryptographic primitives for clawdstrike"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "cryptography", "verification", "clawdstrike"]
categories = ["cryptography", "authentication"]
readme = "../../README.md"

[dependencies]
ed25519-dalek.workspace = true
zeroize.workspace = true
sha2.workspace = true
sha3.workspace = true
rand_core.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
ryu.workspace = true
thiserror.workspace = true
chrono.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile = "3.25"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = "1.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto"
harness = false

[features]
default = []
wasm = []

[lints]
workspace = true
