[package]
name = "hush-proxy"
description = "Network proxy utilities for clawdstrike"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "proxy", "network", "clawdstrike"]
categories = ["network-programming", "authentication"]
readme = "../../README.md"

[dependencies]
thiserror.workspace = true
serde.workspace = true
globset.workspace = true

[features]
default = []

[dev-dependencies]
proptest = "1.10"

[lints]
workspace = true
