[package]
name = "sdr-desktop"
version = "0.1.0"
description = "SDR Desktop - Swarm Detection Response"
edition = "2021"
rust-version = "1.93"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "net", "macros"] }

# HTTP client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Directories
dirs = "6"

# Logging
tracing = "0.1"

# NATS
async-nats = "0.39"
futures = "0.3"

# P2P discovery (optional)
libp2p = { version = "0.56", features = ["tokio", "tcp", "dns", "noise", "yamux", "gossipsub", "mdns", "macros"] }

# Local crates
hush-core = { path = "../../../crates/libs/hush-core" }
clawdstrike = { path = "../../../crates/libs/clawdstrike" }
spine = { package = "hush-spine", path = "../../../crates/libs/spine" }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies if needed

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
