[package]
name = "clawdstrike-guard-sdk"
description = "Guest-side SDK for writing clawdstrike WASM guard plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clawdstrike-guard-sdk-macros = { path = "../clawdstrike-guard-sdk-macros", version = "0.1.3" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
clawdstrike-guard-sdk-macros = { path = "../clawdstrike-guard-sdk-macros", version = "0.1.3" }

[lints]
workspace = true
