[package]
name = "clawdstrike"
description = "Security guards and policy engine for AI agent execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "ai-agent", "policy", "clawdstrike"]
categories = ["authentication", "command-line-utilities"]
readme = "../../README.md"

[dependencies]
hush-core.workspace = true
hush-proxy.workspace = true
spine.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true
glob.workspace = true
chrono.workspace = true
globset.workspace = true
dashmap.workspace = true
futures.workspace = true
uuid = { workspace = true, features = ["v4"] }
unicode-normalization = "0.1"
base64.workspace = true
reqwest.workspace = true
hex.workspace = true
wasmtime = { version = "41.0.3", optional = true, default-features = false, features = ["runtime", "cranelift", "std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = "1.10"
tokio-test = "0.4"
tempfile = "3.25"
axum.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
wat = "1.245.1"

[[bench]]
name = "engine"
harness = false

[features]
default = []
ipfs = []
llm-judge-openai = []
wasm-plugin-runtime = ["dep:wasmtime"]

[lints]
workspace = true
