[package]
name = "hush-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "C ABI for hush-core and clawdstrike — exposes crypto, receipts, jailbreak detection, and watermarking over FFI"

# To regenerate hush.h after changing the C API:
#   cargo install cbindgen
#   cbindgen --crate hush-ffi -o crates/libs/hush-ffi/hush.h

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
hush-core.workspace = true
clawdstrike = { workspace = true, features = ["full"] }
serde_json.workspace = true
hex.workspace = true
base64.workspace = true

[lints]
workspace = true
