[package]
name = "hush-wasm"
description = "WebAssembly bindings for hush-core cryptographic verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hush-core = { workspace = true }
clawdstrike = { workspace = true, default-features = false }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Encoding
hex = { workspace = true }

# Better panic messages in browser
console_error_panic_hook = "0.1"

# Cryptographic randomness in WASM
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []

[lints]
workspace = true
