[package]
name = "hush-spine"
description = "Aegis Spine protocol for ClawdStrike — envelope signing, checkpoints, trust bundles, and NATS transport"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "attestation", "spine", "clawdstrike"]
categories = ["cryptography", "authentication"]
readme = "../../README.md"

[lib]
name = "spine"

[features]
bins = ["dep:anyhow", "dep:clap", "dep:axum", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber", "dep:futures", "dep:uuid"]

[dependencies]
hush-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-nats = "0.39"
tokio.workspace = true
x509-parser = "0.16"
pem = "3"

# Binary-only dependencies (behind "bins" feature)
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "spine-checkpointer"
path = "src/bin/checkpointer.rs"
required-features = ["bins"]

[[bin]]
name = "spine-witness"
path = "src/bin/witness.rs"
required-features = ["bins"]

[[bin]]
name = "spine-proofs-api"
path = "src/bin/proofs_api.rs"
required-features = ["bins"]

[lints]
workspace = true
