[package]
name = "clawdstrike-registry"
description = "Clawdstrike package registry server"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "registry", "packages", "clawdstrike"]
categories = ["command-line-utilities"]

[[bin]]
name = "clawdstrike-registry"
path = "src/main.rs"

[[bin]]
name = "clawdstrike-audit-monitor"
path = "src/bin/audit-monitor.rs"

[dependencies]
hush-core.workspace = true
clawdstrike = { workspace = true, features = ["full"] }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
hex.workspace = true
sha2.workspace = true
rusqlite.workspace = true
toml.workspace = true
base64.workspace = true
dirs.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
clap = { workspace = true }
jsonwebtoken = { workspace = true }
tempfile = "3"

[lints]
workspace = true
