[package]
name = "hushd"
description = "Clawdstrike daemon for runtime security enforcement"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["security", "daemon", "enforcement", "clawdstrike"]
categories = ["command-line-utilities", "authentication"]
readme = "../../README.md"

[lib]
name = "hushd"
path = "src/lib.rs"

[[bin]]
name = "hushd"
path = "src/bin/hushd.rs"

[[bin]]
name = "clawdstriked"
path = "src/bin/clawdstriked.rs"

[dependencies]
hush-core.workspace = true
hush-proxy.workspace = true
clawdstrike = { workspace = true, features = ["full"] }
hush-certification.workspace = true
spine.workspace = true
async-nats = "0.39"
clap.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rand.workspace = true
uuid.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ring = "0.17"

# HTTP server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
rustls = { workspace = true, features = ["ring"] }
rustls-pki-types.workspace = true
tokio-rustls.workspace = true

# Rate limiting
governor.workspace = true
dashmap.workspace = true
regex.workspace = true
globset.workspace = true
roxmltree.workspace = true
openssl.workspace = true
rust-xmlsec.workspace = true
resvg = { version = "0.45.1", default-features = true }

# Database
rusqlite.workspace = true

# Async utilities
tokio-stream.workspace = true
futures.workspace = true

# Config
toml.workspace = true
dirs.workspace = true

# Systemd notifications (optional, linux-only)
sd-notify = { version = "0.4", optional = true }

# HTTP client (for status command + remote policy extends + SIEM exporters)
reqwest = { workspace = true, features = ["blocking"] }
jsonwebtoken.workspace = true
flate2.workspace = true
url.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking", "stream"] }
tempfile = "3"
rcgen = { version = "0.14", default-features = false, features = ["ring", "pem"] }

[features]
default = []
systemd = ["dep:sd-notify"]

[lints]
workspace = true
